--- a/index.html
+++ b/index.html
@@ -12,49 +12,55 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body  id="boostrap-override">
-    <div class="hero">
-        <div class="container d-flex flex-column justify-content-center text-light">
-            <div class="row gap-0 row-gap-5">
-                <div class="col-lg-6 d-flex flex-column justify-content-center pe-5">
-                    <h1 class="my-title fw-semibold mb-4">Generate secure password</h1>
-                    <p>Create strong, unique passwords effortlessly with our generator. Protect your accounts with random combinations of letters, numbers, and symbols.</p>
-                </div>
-                <div class="col-lg-6 d-flex flex-column justify-content-center">
-                    <div  id="newPassBox" class="card mb-5 ">
-                        <div class="card-header">
-                          Generated Password
-                        </div>
-                        <div class="card-body">
-                          <h5 class="card-title"><span id="newPass"></span><i id="IconForCopy" class="fa-solid fa-copy text-primary copyIcon "></i><i class="fa-solid fa-check correctIcon text-primary visually-hidden" id="correctionIcon"></i><span id="copiedNotification" class="visually-hidden">Copied</span></h5>
-                        </div>
-                      </div>
-                      <label for="range" class="form-label align-self-start mb-3 fs-5">Password size: <span id="CharQuantity" class="bg-primary rounded p-1 "></span></label> 
-                        <input type="range" class="form-range mb-4" min="4" max="20" step="1" value="10" id="range">
-                        <div class="form-check form-switch mb-2">
-                          <input class="form-check-input" type="checkbox" role="switch" id="lowerCaseOption" checked >
-                          <label class="form-check-label" for="lowerCaseOption">Consider lower case letters</label>
-                        </div>
-                        <div class="form-check form-switch mb-2">
-                          <input class="form-check-input" type="checkbox" role="switch" id="upperCaseOption" checked>
-                          <label class="form-check-label" for="upperCaseOption">Consider upper case letters</label>
-                        </div>
-                        <div class="form-check form-switch mb-2">
-                          <input class="form-check-input" type="checkbox" role="switch" id="specialCharOption" checked >
-                          <label class="form-check-label" for="specialCharOption">Consider special characteres</label>
-                        </div>
-                        <div class="form-check form-switch mb-2">
-                          <input class="form-check-input" type="checkbox" role="switch" id="numberCharOption" checked >
-                          <label class="form-check-label" for="numberCharOption">Consider numbers</label>
-                        </div>
-                        <button type="button" id="button" class="btn btn-primary btn-lg mt-4">
-                        <i class="fa-solid fa-key white"></i>Generate Password</button>
-                </div>
-            </div>
+
+<body id="boostrap-override">
+  <div class="hero">
+    <div class="container d-flex flex-column justify-content-center text-light">
+      <div class="row gap-0 row-gap-5">
+        <div class="col-lg-6 d-flex flex-column justify-content-center mt-5 mt-lg-0">
+          <h1 class="my-title fw-semibold mb-4">Generate secure password</h1>
+          <p>Create strong, unique passwords effortlessly with our generator. Protect your accounts with random
+            combinations of letters, numbers, and symbols.</p>
         </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script> 
-   <script src="./main.js"></script>
+        <div class="col-lg-6 d-flex flex-column justify-content-center mb-5 mb-lg-0">
+          <div id="newPassBox" class="card mb-5 ">
+            <div class="card-header">
+              Generated Password
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><span id="newPass"></span><i id="IconForCopy"
+                  class="fa-solid fa-copy text-primary copyIcon "></i><i
+                  class="fa-solid fa-check correctIcon text-primary visually-hidden" id="correctionIcon"></i><span
+                  id="copiedNotification" class="visually-hidden">Copied</span></h5>
+            </div>
+          </div>
+          <label for="range" class="form-label align-self-start mb-3 fs-5">Password size: <span id="CharQuantity"
+              class="bg-primary rounded p-1 "></span></label>
+          <input type="range" class="form-range mb-4" min="4" max="20" step="1" value="10" id="range">
+          <div class="form-check form-switch mb-2">
+            <input class="form-check-input" type="checkbox" role="switch" id="lowerCaseOption" checked>
+            <label class="form-check-label" for="lowerCaseOption">Consider lower case letters</label>
+          </div>
+          <div class="form-check form-switch mb-2">
+            <input class="form-check-input" type="checkbox" role="switch" id="upperCaseOption" checked>
+            <label class="form-check-label" for="upperCaseOption">Consider upper case letters</label>
+          </div>
+          <div class="form-check form-switch mb-2">
+            <input class="form-check-input" type="checkbox" role="switch" id="specialCharOption" checked>
+            <label class="form-check-label" for="specialCharOption">Consider special characteres</label>
+          </div>
+          <div class="form-check form-switch mb-2">
+            <input class="form-check-input" type="checkbox" role="switch" id="numberCharOption" checked>
+            <label class="form-check-label" for="numberCharOption">Consider numbers</label>
+          </div>
+          <button type="button" id="button" class="btn btn-primary btn-lg mt-4">
+            <i class="fa-solid fa-key white"></i>Generate Password</button>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script src="./main.js"></script>
 </body>
 </html>
